[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/hud/win_lost/WinLost.gd" type="Script" id=1]
[ext_resource path="res://scenes/panels/brown_panel.png" type="Texture" id=2]
[ext_resource path="res://fonts/nokia/title-nokia-16.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/nokia/mini-nokia-8.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/buttons/wide/Wide.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/shop/Shop.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/buttons/shop/Shop.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]

resource_name = "hide"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Shop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 240, 0 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "show"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Shop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 240, 0 ), Vector2( 0, 0 ) ]
}

[node name="WinLost" type="Node2D"]

script = ExtResource( 1 )

[node name="Panel" type="NinePatchRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 120.0
margin_bottom = 80.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
_sections_unfolded = [ "Axis Stretch", "Mouse", "Patch Margin", "Rect", "Size Flags" ]

[node name="Title" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 240.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.929412, 0.462745, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "hola"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Stats" type="Container" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 68.0
margin_top = 32.0
margin_right = 232.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Grid" type="GridContainer" parent="Stats" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 2
_sections_unfolded = [ "Anchor" ]

[node name="DestroyedEnemies" type="Label" parent="Stats/Grid" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 97.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.223529, 0.427451, 1 )
text = "Destroyed Enemies:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts" ]

[node name="DE" type="Label" parent="Stats/Grid" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 101.0
margin_right = 164.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.223529, 0.427451, 1 )
text = "100/100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts" ]

[node name="Algo" type="Label" parent="Stats/Grid" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 14.0
margin_right = 97.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.223529, 0.427451, 1 )
text = "algo algo 1:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts" ]

[node name="A" type="Label" parent="Stats/Grid" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 101.0
margin_top = 14.0
margin_right = 164.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.223529, 0.427451, 1 )
text = "100/100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts" ]

[node name="Menu" parent="." index="3" instance=ExtResource( 5 )]

editor/display_folded = true
margin_left = 8.0
margin_top = 124.0
margin_right = 42.0
margin_bottom = 139.0
rect_scale = Vector2( 2, 2 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label" parent="Menu" index="0"]

text = "MENU"

[node name="Resume" parent="." index="4" instance=ExtResource( 5 )]

editor/display_folded = true
margin_left = 88.0
margin_top = 124.0
margin_right = 122.0
margin_bottom = 139.0
rect_scale = Vector2( 2, 2 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label" parent="Resume" index="0"]

text = "RESUME"

[node name="Next" parent="." index="5" instance=ExtResource( 5 )]

editor/display_folded = true
margin_left = 164.0
margin_top = 124.0
margin_right = 198.0
margin_bottom = 139.0
rect_scale = Vector2( 2, 2 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label" parent="Next" index="0"]

text = "NEXT"

[node name="Shop" parent="." index="6" instance=ExtResource( 6 )]

position = Vector2( 240, 0 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="ShopAnim" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )
blend_times = [  ]

[node name="ShopButton" parent="." index="8" instance=ExtResource( 7 )]

margin_left = 224.0
margin_right = 240.0
toggle_mode = true
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]

[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]

[connection signal="toggled" from="ShopButton" to="." method="_on_Shop_toggled"]


[editable path="Menu"]
[editable path="Resume"]
[editable path="Next"]
